0.2.3 and Java 26